# starcoder2.npy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml  tests.yml
starcoder2/: __init__.py  model.py  tokenizer.py
starcoder2/resources/: merges.txt  vocab.json
tests/: test_model.py  test_model_equivalence.py  test_tokenizer.py
